<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/et_result1"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_result"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:background="#2126eb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="400dp"
        android:text="@string/tv_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_age1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="400dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_gravity="right"
        android:gravity="right"
        app:layout_constraintStart_toEndOf="@+id/et_age"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_age2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="410dp"
        android:layout_marginEnd="70dp"
        android:text="@string/tv_age1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_age1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="480dp"
        android:text="@string/tv_Height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_height2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="70dp"
        android:text="@string/tv_Height1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_height1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="560dp"
        android:text="@string/tv_Weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_weight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="70dp"
        android:text="@string/tv_Weight1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_weight1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bt_Math"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_weight1" />

    <Button
        android:id="@+id/bt_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:text="@string/bt_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_button1" />

    <EditText
        android:id="@+id/et_height1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="470dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_gravity="right"
        android:gravity="right"
        app:layout_constraintStart_toEndOf="@+id/et_height"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_weight1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="540dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_gravity="right"
        android:gravity="right"
        app:layout_constraintStart_toEndOf="@+id/et_weight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_result2"
        android:layout_width="284dp"
        android:layout_height="42dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_result"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_result3"
        android:layout_width="270dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tv_result"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/et_result4"
        android:layout_width="224dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="60dp"
        android:text="@string/tv_result"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>